# spdx

./: .gitignore  .travis.meta.yml  .travis.yml  CHANGELOG.md  README.md  cabal.haskell-ci  cabal.project  spdx.cabal  stack.yaml
.github/workflows/: haskell-ci.yml
bench/: Bench.hs
data/: spdx_licenselist.xml  spdx_licenselist_v2.6.ods  spdx_licenselist_v2.6_licenses.csv
dev/: Main.hs
dpll/test/: dpll-dimacs.hs  dpll-small.hs  dpll-test.hs
examples/: sat-simple-sudoku.hs
sat-simple-pure/: Assert.hs  DPLL.hs  EST.hs  LCG.hs  Lifted.hs  SparseHeap.hs  SparseMaxHeap.hs  SparseSet.hs  UnliftedSTRef.hs  Vec.hs
sat-simple-pure/Control/Monad/: SAT.hs
sat-simple-pure/DPLL/: Base.hs  Boost.hs  Clause2.hs  DIMACS.hs  LBool.hs  Level.hs  LitSet.hs  LitTable.hs  LitVar.hs  PartialAssignment.hs  Prim.hs  Satisfied.hs  Stats.hs  Trail.hs  Utils.hs  VarSet.hs
spdx-data/: Main.hs  spdx-dev.cabal
src/Data/: SPDX.hs
src/Data/SPDX/: LatticeSyntax.hs  Licenses.hs  Parser.hs  Pretty.hs  Ranges.hs  Types.hs
src/Distribution/: SPDX.hs
src/Distribution/SPDX/: Extra.hs  LatticeSyntax.hs  Licenses.hs  Parser.hs  Ranges.hs  Types.hs
src/Distribution/SPDX/Extra/: Internal.hs
tests/: Generators.hs  OSI.hs  Tests.hs
