name:                spdx
version:             0.2.2.0
synopsis:            SPDX license expression language
description:         Implementation of <https://spdx.org/sites/cpstandard/files/pages/files/spdx-2.0.pdf SPDX> related functionality.
homepage:            https://github.com/phadej/spdx
license:             BSD3
license-file:        LICENSE
author:              Oleg Grenrus <oleg.grenrus@iki.fi>
maintainer:          Oleg Grenrus <oleg.grenrus@iki.fi>
copyright:           (c) 2015 Oleg Grenrus
category:            Data
build-type:          Simple
extra-source-files:  README.md CHANGELOG.md
cabal-version:       >=1.10
tested-with:
  GHC==7.4.2,
  GHC==7.6.3,
  GHC==7.8.4,
  GHC==7.10.3,
  GHC==8.0.2,
  GHC==8.2.2,
  GHC==8.4.1

source-repository head
  type: git
  location: https://github.com/phadej/spdx

library
  default-language:    Haskell98
  exposed-modules:     Data.SPDX,
                       Data.SPDX.LatticeSyntax
  other-modules:       Data.SPDX.Licenses,
                       Data.SPDX.Types,
                       Data.SPDX.Parser,
                       Data.SPDX.Pretty,
                       Data.SPDX.Ranges
  other-extensions:    CPP
                       DeriveFunctor,
                       DeriveFoldable,
                       DeriveTraversable,
                       DeriveDataTypeable
  if impl(ghc >=7.2)
    other-extensions:  DeriveGeneric
  hs-source-dirs:      src/
  ghc-options:         -Wall
  build-depends:       base              >=4.2 && <4.12,
                       containers,
                       transformers      >=0.3 && <0.6
  if impl(ghc >=7.2 && <7.5)
    build-depends: ghc-prim


test-suite test
  type:                exitcode-stdio-1.0
  main-is:             Tests.hs
  other-modules:       Generators
  default-language:    Haskell98
  hs-source-dirs:      tests
  ghc-options:         -Wall
  build-depends:       base,
                       tasty             >=0.10 && <1.1,
                       tasty-quickcheck  >=0.8  && <0.11,
                       spdx

benchmark bench
  type:                exitcode-stdio-1.0
  main-is:             Bench.hs
  other-modules:       Generators
  default-language:    Haskell98
  hs-source-dirs:      tests bench
  ghc-options:         -Wall
  build-depends:       base,
                       QuickCheck       >=2.11.3 && <2.12,
                       tasty-quickcheck >=0.8    && <0.11,
                       spdx
