name:                spdx-dev
version:             0.1.0.0
synopsis:            Utilities to develop spdx package
description:         'spdx-data' creates a license lists from SDPX master data
homepage:            https://github.com/phadej/spdx
license:             BSD3
license-file:        LICENSE
author:              Oleg Grenrus <oleg.grenrus@iki.fi>
maintainer:          Oleg Grenrus <oleg.grenrus@iki.fi>
copyright:           (c) 2015 Oleg Grenrus
category:            Data
build-type:          Simple
cabal-version:       >=1.10

executable spdx-data
  main-is:             Main.hs
  build-depends:
    base >=4.9 && <4.11,
    bytestring,
    cassava >=0.4.5.1 && <0.5
  ghc-options:         -Wall -Werror
  default-language:    Haskell2010
